<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.vsoft.omni.upi.fragments.DashboardFragment"
    android:padding="6dp"
    android:background="@color/colorContentBackground">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left|top">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1"
            android:layout_marginBottom="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="@dimen/dashboard_button_height"
                android:paddingBottom="4dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dashboard_button_height"
                    android:layout_column="0"
                    android:layout_marginRight="4dp">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dashboard_button_icon_height"
                        android:id="@+id/dashboard_button_pay"
                        android:background="@color/colorPrimary"
                        android:textColor="@color/dashboardButtonForeground"
                        android:textSize="@dimen/dashboard_button_font_size"
                        android:gravity="bottom|center_horizontal"
                        style="?attr/borderlessButtonStyle"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dashboard_button_text_height"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/dashboardButtonForeground"
                        android:textSize="@dimen/dashboard_text_font_size"
                        android:background="@color/colorPrimary"
                        android:text="@string/dashboard_pay"
                        android:id="@+id/dashboard_button_pay_text"
                        android:gravity="top|center_horizontal" />


                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dashboard_button_height"
                    android:layout_column="1">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dashboard_button_icon_height"
                        android:id="@+id/dashboard_button_collect"
                        android:background="@color/colorPrimary"
                        android:textColor="@color/dashboardButtonForeground"
                        android:textSize="@dimen/dashboard_button_font_size"
                        android:gravity="bottom|center_horizontal"
                        style="?attr/borderlessButtonStyle"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dashboard_button_text_height"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/dashboardButtonForeground"
                        android:background="@color/colorPrimary"
                        android:textSize="@dimen/dashboard_text_font_size"
                        android:text="@string/dashboard_collect"
                        android:id="@+id/dashboard_button_collect_text"
                        android:gravity="top|center_horizontal" />


                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="@dimen/dashboard_button_height">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dashboard_button_height"
                    android:layout_column="0"
                    android:layout_marginRight="4dp">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dashboard_button_icon_height"
                        android:id="@+id/dashboard_button_approval"
                        android:background="@color/colorPrimary"
                        android:textColor="@color/dashboardButtonForeground"
                        android:textSize="@dimen/dashboard_button_font_size"
                        android:layout_column="1"
                        android:gravity="bottom|center_horizontal"
                        style="?attr/borderlessButtonStyle"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dashboard_button_text_height"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/dashboardButtonForeground"
                        android:background="@color/colorPrimary"
                        android:textSize="@dimen/dashboard_text_font_size"
                        android:text="@string/dashboard_approval"
                        android:id="@+id/dashboard_button_approval_text"
                        android:gravity="top|center_horizontal" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dashboard_button_height"
                    android:layout_column="1">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dashboard_button_icon_height"
                        android:id="@+id/dashboard_button_history"
                        android:background="@color/colorPrimary"
                        android:textColor="@color/dashboardButtonForeground"
                        android:textSize="@dimen/dashboard_button_font_size"
                        android:gravity="bottom|center_horizontal"
                        style="?attr/borderlessButtonStyle"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dashboard_button_text_height"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/dashboardButtonForeground"
                        android:background="@color/colorPrimary"
                        android:textSize="@dimen/dashboard_text_font_size"
                        android:text="@string/dashboard_history"
                        android:id="@+id/dashboard_button_history_text"
                        android:gravity="top|center_horizontal" />


                </LinearLayout>

            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:padding="8dp"
                android:background="@color/gridHeaderBackground"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/dashboard_summary"
                    android:textColor="@color/gridHeaderForeground"
                    android:id="@+id/dashboard_history_header"
                    android:textSize="@dimen/dashboard_summary_font_size"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:padding="8dp"
                android:background="@color/gridContentBackground"
                android:gravity="center_vertical">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:stretchColumns="0,1">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/dashboard_summary_pay"
                            android:textColor="@color/colorPrimaryDark"
                            android:gravity="left|center_vertical"
                            android:id="@+id/dashboard_history_pay"
                            android:layout_column="0"
                            android:textSize="@dimen/dashboard_summary_font_size"
                            android:layout_marginRight="50dp"/>

                        <TableLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_column="1">

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <TextView
                                    android:layout_width="@dimen/dashboard_summary_item_size"
                                    android:layout_height="match_parent"
                                    android:text="₹800"
                                    android:textColor="@color/dashboardAmountColorSuccess"
                                    android:id="@+id/dashboard_history_pay1"
                                    android:gravity="center"
                                    android:layout_column="0"
                                    android:textSize="@dimen/dashboard_summary_font_size"/>

                                <TextView
                                    android:layout_width="@dimen/dashboard_summary_item_size"
                                    android:layout_height="match_parent"
                                    android:text="₹400"
                                    android:textColor="@color/dashboardAmountColorPending"
                                    android:id="@+id/dashboard_history_pay2"
                                    android:gravity="center"
                                    android:layout_column="1"
                                    android:textSize="@dimen/dashboard_summary_font_size"/>

                                <TextView
                                    android:layout_width="@dimen/dashboard_summary_item_size"
                                    android:layout_height="match_parent"
                                    android:text="₹250"
                                    android:textColor="@color/dashboardAmountColorFailure"
                                    android:id="@+id/dashboard_history_pay3"
                                    android:gravity="center"
                                    android:layout_column="2"
                                    android:textSize="@dimen/dashboard_summary_font_size"/>

                            </TableRow>

                        </TableLayout>

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/dashboard_summary_collect"
                            android:textColor="@color/colorPrimaryDark"
                            android:gravity="left|center_vertical"
                            android:id="@+id/dashboard_history_collect"
                            android:layout_column="0"
                            android:textSize="@dimen/dashboard_summary_font_size"/>

                        <TableLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_column="1">

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <TextView
                                    android:layout_width="@dimen/dashboard_summary_item_size"
                                    android:layout_height="match_parent"
                                    android:text="₹560"
                                    android:textColor="@color/dashboardAmountColorSuccess"
                                    android:id="@+id/dashboard_history_collect1"
                                    android:gravity="center"
                                    android:layout_column="0"
                                    android:textSize="@dimen/dashboard_summary_font_size"/>

                                <TextView
                                    android:layout_width="@dimen/dashboard_summary_item_size"
                                    android:layout_height="match_parent"
                                    android:text="₹200"
                                    android:textColor="@color/dashboardAmountColorPending"
                                    android:id="@+id/dashboard_history_collect2"
                                    android:gravity="center"
                                    android:layout_column="1"
                                    android:textSize="@dimen/dashboard_summary_font_size"/>

                                <TextView
                                    android:layout_width="@dimen/dashboard_summary_item_size"
                                    android:layout_height="match_parent"
                                    android:text="₹700"
                                    android:textColor="@color/dashboardAmountColorFailure"
                                    android:id="@+id/dashboard_history_collect3"
                                    android:gravity="center"
                                    android:layout_column="2"
                                    android:textSize="@dimen/dashboard_summary_font_size"/>

                            </TableRow>

                        </TableLayout>

                    </TableRow>


                </TableLayout>

            </TableRow>


        </TableLayout>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:padding="8dp"
                android:background="@color/gridHeaderBackground"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/account_summary"
                    android:textColor="@color/gridHeaderForeground"
                    android:id="@+id/dashboard_accounts_header"
                    android:textSize="@dimen/dashboard_summary_font_size"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:padding="8dp"
                android:background="@color/gridContentBackground"
                android:gravity="center_vertical">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:stretchColumns="0,1">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="XXXXX865214 / MAPP0000106"
                            android:textColor="@color/colorPrimaryDark"
                            android:gravity="left|center_vertical"
                            android:layout_column="0"
                            android:textSize="8pt"
                            android:layout_marginRight="50dp"/>


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="₹4050"
                            android:textColor="@color/colorPrimaryDark"
                            android:gravity="left|center"
                            android:layout_column="0"
                            android:textSize="8pt"
                            android:layout_marginRight="50dp"/>

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="XXXXX865220 / MAPP0000108"
                            android:textColor="@color/colorPrimaryDark"
                            android:gravity="left|center_vertical"
                            android:layout_column="0"
                            android:textSize="8pt"
                            android:layout_marginRight="50dp"/>


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="₹8000"
                            android:textColor="@color/colorPrimaryDark"
                            android:gravity="left|center"
                            android:layout_column="0"
                            android:textSize="8pt"
                            android:layout_marginRight="50dp"/>

                    </TableRow>


                </TableLayout>

            </TableRow>


        </TableLayout>

    </LinearLayout>

</FrameLayout>
